Avance de barra de progreso skills y reponsividad

--- a/index.html
+++ b/index.html
@@ -203,14 +203,147 @@
 
             <!-- BTN DOWNLOAD CV -->
             <div class="about__section--butons">
-              <a href="#" class="download-cv__btn"><i class="fa-solid fa-download"></i> Descargar CV</a>
+              <a href="assets/pdf/CurriculumCarlosEspinoza.pdf" class="download-cv__btn"><i class="fa-solid fa-download"></i> Descargar CV</a>
               <a href="#" class="contact-me__btn"><i class="fa-solid fa-paper-plane"></i> Contáctame</a>
             </div>
           </div>
         </section>
-
+        
         <!--=============== SKILLS ===============-->
-        <section class="skills section" id="skills"></section>
+        <section class="skills" id="skills">
+          <div class="skills__container">
+            <!-- TITLE SKILLS -->
+            <div class="skills__content--title">
+              <h2 class="skills__title">Skills</h2>
+            </div>
+            <!-- PROGRESS BARS -->
+            <div class="skills__content--progress-bars">
+              <!-- PRGOGRAMING LANGUAGES -->
+              <div class="content__languages progress-bar__containers">
+                <div class="content__languajes--title">
+                  <h3 class="languages__title skills__subtitle">Programming languages</h2>
+                </div>
+                <div class="languages__items container__items">
+                  <h4 class="languages__java--title items__title">Java</h4>
+                  <div class="skill-bar">
+                    <div class="progress-bar java">
+                      <span>60%</span>
+                    </div>
+                  </div>
+                </div>
+                <div class="languages__items container__items">
+                  <h4 class="languages__php--title items__title">PHP</h4>
+                  <div class="skill-bar">
+                    <div class="progress-bar php">
+                      <span>30%</span>
+                    </div>
+                  </div>
+                </div>
+                <div class="languages__items container__items">
+                  <h4 class="languages__javascript--title items__title">JavaScript</h4>
+                  <div class="skill-bar">
+                    <div class="progress-bar javascript">
+                      <span class="">30%</span>
+                    </div>
+                  </div>
+                </div>
+                <div class="languages__items container__items">
+                  <h4 class="languages__typescript--title items__title">TypeScript</h4>
+                  <div class="skill-bar">
+                    <div class="progress-bar typescript">
+                      <span>20%</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <!-- LANGUAGES STYLES AND MARKUP -->
+              <div class="content__langs-styles progress-bar__containers">
+                <div class="content__langs-styles--title">
+                  <h3 class="langs-styles__title skills__subtitle">Markup and Styles Langs.</h2>
+                </div>
+                <div class="langs-styles__items container__items">
+                  <h4 class="langs-styles__html--title items__title">HTML</h4>
+                  <div class="skill-bar">
+                    <div class="progress-bar html">
+                      <span>80%</span>
+                    </div>
+                  </div>
+                </div>
+                <div class="langs-styles__items container__items">
+                  <h4 class="langs-styles__css--title items__title">CSS</h4>
+                  <div class="skill-bar">
+                    <div class="progress-bar css">
+                      <span>65%</span>
+                    </div>
+                  </div>
+                </div>
+                <div class="langs-styles__items container__items">
+                  <h4 class="langs-styles__sass--title items__title">Sass</h4>
+                  <div class="skill-bar">
+                    <div class="progress-bar sass">
+                      <span>40%</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              
+              <!-- Lenguajes y Gestores de bases de datos -->
+              <div class="content__db progress-bar__containers">
+                <div class="content__db--title">
+                  <h3 class="db__title skills__subtitle">Data Bases</h2>
+                </div>
+                <div class="db__items container__items">
+                  <h4 class="db__mysql--title items__title">MySQL</h4>
+                  <div class="skill-bar">
+                    <div class="progress-bar mysql">
+                      <span>60%</span>
+                    </div>
+                  </div>
+                </div>
+                <div class="db__items container__items">
+                  <h4 class="db__mongo--title items__title">Mongo DB</h4>
+                  <div class="skill-bar">
+                    <div class="progress-bar mongodb">
+                      <span>30%</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <!-- OTROS -->
+              <div class="content__others progress-bar__containers">
+                <div class="content__others--title">
+                  <h3 class="others__title skills__subtitle">Others</h2>
+                </div>
+                <div class="others__items container__items">
+                  <h4 class="items__title">Figma</h4>
+                  <div class="skill-bar">
+                    <div class="progress-bar figma">
+                      <span>80%</span>
+                    </div>
+                  </div>
+                </div>
+                <div class="others__items container__items">
+                  <h4 class="others__git--title items__title">Git, Git Hub</h4>
+                  <div class="skill-bar">
+                    <div class="progress-bar git">
+                      <span>30%</span>
+                    </div>
+                  </div>
+                </div>
+                <div class="others__items container__items">
+                  <h4 class="others__illustrator--title items__title">Illustrator</h4>
+                  <div class="skill-bar">
+                    <div class="progress-bar illustrator">
+                      <span>30%</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
 
         <!--=============== SERVICES ===============-->
         <section class="services section"></section>
