Actualización de diseño

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!--NORMALICE-->
     <link rel="stylesheet" href="assets/css/normalize.css" />
 
-    <link rel="stylesheet" href="assets/css/styles.css" />
+    <link rel="stylesheet" href="./assets/css/styles.css" />
 
     <title>Portfolio CREP</title>
   </head>
